@@ -16,7 +16,7 @@
 # Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
 
-"""."""
+"""Formatting text."""
 
 
 from gaupol.base import Delegate
@@ -24,8 +24,60 @@ from gaupol.base import Delegate
 
 class FormatAgent(Delegate):
 
-    """."""
+    """Formatting text."""
 
     # pylint: disable-msg=E0203,W0201
 
-    pass
+    def _change_case(self, method):
+        """Change the case of the selected texts.
+
+        method should be 'title', 'capitalize', 'upper' or 'lower'.
+        """
+        page = self.get_current_page()
+        rows = page.view.get_selected_rows()
+        col = page.view.get_focus()[1]
+        doc = page.text_column_to_document(col)
+        page.project.change_case(rows, doc, method)
+
+    def on_show_case_menu_activate(self, *args):
+        """Show the case format menu."""
+
+        pass
+
+    def on_toggle_dialogue_lines_activate(self, *args):
+        """Toggle dialogue lines on the selected texts."""
+
+        page = self.get_current_page()
+        rows = page.view.get_selected_rows()
+        col = page.view.get_focus()[1]
+        doc = page.text_column_to_document(col)
+        page.project.toggle_dialogue_lines(rows, doc)
+
+    def on_toggle_italicization_activate(self, *args):
+        """Toggle italicization of the selected texts."""
+
+        page = self.get_current_page()
+        rows = page.view.get_selected_rows()
+        col = page.view.get_focus()[1]
+        doc = page.text_column_to_document(col)
+        page.project.toggle_italicization(rows, doc)
+
+    def on_use_lower_case_activate(self, *args):
+        """Change the selected texts to lower case."""
+
+        self._change_case("lower")
+
+    def on_use_sentence_case_activate(self, *args):
+        """Change the selected texts to sentence case."""
+
+        self._change_case("capitalize")
+
+    def on_use_title_case_activate(self, *args):
+        """Change the selected texts to title case."""
+
+        self._change_case("title")
+
+    def on_use_upper_case_activate(self, *args):
+        """Change the selected texts to upper case."""
+
+        self._change_case("upper")
