@@ -1,3 +1,10 @@
+2007-02-26  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/gtk/_agents/format.py:
+	* gaupol/gtk/_actions/format.py:
+	* data/ui.xml:
+	Add format menu items.
+
 2007-02-25  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/gtk/conf/wrappers.py:
